@@ -8,4 +8,12 @@
    insert-after="member.css"
    rendering="link" cacheable="True" cookable="True" />
 
+ <stylesheet
+   id="acl_users/session/refresh?session_refresh=true&amp;type=css&amp;minutes=10"
+   authenticated="True"
+   cacheable="False"
+   compression="none"
+   cookable="False"
+   insert-after="ploneCustom.css" />
+
 </object>
