@@ -135,6 +135,9 @@ def setup_personal_folder(site):
 def enable_secure_cookies(context):
     acl = aq_get(context, 'acl_users')
     acl.session._updateProperty('secure', True)
+    acl.session._updateProperty('timeout', 86400)
+    acl.session._updateProperty('refresh_interval', 3600)
+    acl.session._updateProperty('cookie_lifetime', 7)
 
 
 def ignore_link_integrity_exceptions(site):
