@@ -47,8 +47,9 @@ class TestSiteSetup(IntranettTestCase):
         portal = self.layer['portal']
         css = getToolByName(portal, 'portal_css')
         resources = css.getEvaluatedResources(portal)
-        self.assertEqual(len(resources), 2)
-        self.assert_(resources[1]._data['id'].startswith('IEFixes'))
+        self.assertEqual(len(resources), 3)
+        self.assert_(resources[1]._data['id'].startswith('acl_users'))
+        self.assert_(resources[2]._data['id'].startswith('IEFixes'))
 
     def test_kss_resources(self):
         portal = self.layer['portal']
